--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@t3-oss/env-core": "^0.13.8",
@@ -32,6 +34,7 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "ky": "^1.14.0",
@@ -41,6 +44,7 @@
     "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.1",
+    "react-quill-new": "^3.6.0",
     "rooks": "^9.4.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
