--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -41,6 +43,7 @@
     "lucide-react": "^0.554.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
+    "react-currency-input-field": "^4.0.3",
     "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.66.1",
@@ -56,7 +59,7 @@
     "@eslint/js": "^9.39.1",
     "@tanstack/router-plugin": "^1.136.8",
     "@types/date-fns": "^2.5.3",
-    "@types/node": "^24.10.1",
+    "@types/node": "^24.10.4",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@types/react-dropzone": "^4.2.2",
